--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1784,6 +1784,43 @@ body {
 .cid-qRVdI3MtTY P {
   color: #ffffff;
 }
+.cid-qUfV3fKi2X {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-image: url("../../../assets/images/background2.jpg");
+}
+.cid-qUfV3fKi2X .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-qUfV3fKi2X .media-row {
+  display: flex;
+  justify-content: center;
+}
+.cid-qUfV3fKi2X .team-item {
+  transition: all .2s;
+  margin-bottom: 2rem;
+}
+.cid-qUfV3fKi2X .team-item .item-image img {
+  width: 100%;
+}
+.cid-qUfV3fKi2X .team-item .item-name p {
+  margin-bottom: 0;
+}
+.cid-qUfV3fKi2X .team-item .item-role p {
+  margin-bottom: 0;
+}
+.cid-qUfV3fKi2X .team-item .item-social {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.cid-qUfV3fKi2X .team-item .item-social .socicon {
+  color: #232323;
+  font-size: 17px;
+}
+.cid-qUfV3fKi2X .team-item .item-caption {
+  background: #efefef;
+}
 .cid-qU49loFvch {
   padding-top: 30px;
   padding-bottom: 30px;
