--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1784,42 +1784,66 @@ body {
 .cid-qRVdI3MtTY P {
   color: #ffffff;
 }
-.cid-qUfV3fKi2X {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-image: url("../../../assets/images/background2.jpg");
+.cid-qUg5HOpUae {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
 }
-.cid-qUfV3fKi2X .mbr-section-subtitle {
+.cid-qUg5HOpUae .line {
+  background-color: #149dcc;
+  color: #149dcc;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
+}
+.cid-qUg5HOpUae .section-text {
+  padding: 2rem 0;
+}
+.cid-qUg5HOpUae .inner-container {
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-qUg5HOpUae .inner-container {
+    width: 100% !important;
+  }
+}
+.cid-qUg5JUswG7 {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+.cid-qUg5JUswG7 .counter-container {
   color: #767676;
 }
-.cid-qUfV3fKi2X .media-row {
-  display: flex;
-  justify-content: center;
+.cid-qUg5JUswG7 .counter-container ul {
+  margin-bottom: 0;
 }
-.cid-qUfV3fKi2X .team-item {
+.cid-qUg5JUswG7 .counter-container ul li {
+  margin-bottom: 1rem;
+  list-style: none;
+}
+.cid-qUg5JUswG7 .counter-container ul li:before {
+  position: absolute;
+  left: 0px;
+  margin-top: -10px;
+  padding-top: 3px;
+  content: '';
+  display: inline-block;
+  text-align: center;
+  margin: 5px 10px;
+  line-height: 20px;
   transition: all .2s;
-  margin-bottom: 2rem;
+  color: #ffffff;
+  background: #149dcc;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  content: '✓';
 }
-.cid-qUfV3fKi2X .team-item .item-image img {
-  width: 100%;
-}
-.cid-qUfV3fKi2X .team-item .item-name p {
-  margin-bottom: 0;
-}
-.cid-qUfV3fKi2X .team-item .item-role p {
-  margin-bottom: 0;
-}
-.cid-qUfV3fKi2X .team-item .item-social {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-.cid-qUfV3fKi2X .team-item .item-social .socicon {
-  color: #232323;
-  font-size: 17px;
-}
-.cid-qUfV3fKi2X .team-item .item-caption {
-  background: #efefef;
+.cid-qUg5ZLqOtE {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-image: url("../../../assets/images/background4.jpg");
 }
 .cid-qU49loFvch {
   padding-top: 30px;
